RESOLVED FIXED279499
[GStreamer] Fix potential clash between std::span and WTF's span
https://bugs.webkit.org/show_bug.cgi?id=279499
Summary [GStreamer] Fix potential clash between std::span and WTF's span
Philippe Normand
Reported 2024-09-11 01:33:04 PDT
In file included from /app/webkit/WebKitBuild/WPE/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-56.cpp:7: /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp: In static member function ‘static WTF::RefPtr<WebCore::VideoFrameGStreamer> WebCore::VideoFrameGStreamer::createFromPixelBuffer(WTF::Ref<WebCore::PixelBuffer>&&, CanvasContentType, WebCore::VideoFrame::Rotation, const WTF::MediaTime&, const WebCore::IntSize&, double, bool, std::optional<WebCore::VideoFrameTimeMetadata>&&, WebCore::PlatformVideoColorSpace&&)’: /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:325:40: error: reference to ‘span’ is ambiguous 325 | std::span<const char> formatName = span(gst_video_format_to_string(format)); | ^~~~
Attachments
Philippe Normand
Comment 1 2024-09-11 01:35:30 PDT
EWS
Comment 2 2024-09-11 02:28:24 PDT
Committed 283476@main (19abc8c887de): <https://commits.webkit.org/283476@main> Reviewed commits have been landed. Closing PR #33452 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-11 02:29:11 PDT
Note You need to log in before you can comment on or make changes to this bug.